# turboquant

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_cuda.py
.claude/: settings.local.json
docs/: spec.md
docs/.ipynb_checkpoints/: spec-checkpoint.md
docs/notes/: implementation_reference.md  turboquant_notes.md
scripts/: benchmark_fused_kernel.py  check_compression.py  diag_cache_api.py  diag_cache_api2.py  diag_imports.py  diag_vram.py  measure_compression.py  test_hf_integration.py
src/turboquant/: __init__.py  bit_packing.py  calibration.py  codebook.py  codebook_torch.py  qjl.py  qjl_torch.py  quantizer_mse.py  quantizer_mse_torch.py  quantizer_prod.py  quantizer_prod_torch.py  rotation.py  rotation_torch.py  utils.py
src/turboquant/integrations/: __init__.py  attention.py  hf_cache.py  memory_tracker.py
src/turboquant/kernels/: __init__.py  decompress_attn.py  (+1 more)
tests/: conftest.py  test_bit_packing.py  test_calibration.py  test_codebook.py  test_codebook_torch.py  test_cross_backend.py  test_decompress_attn_ref.py  test_decompress_attn_triton.py  test_distortion_bounds.py  test_distortion_bounds_torch.py  test_fused_cache_integration.py  test_fused_kernel_cuda_graph.py  test_fused_kernel_perf.py  test_fused_kernel_rotation_fusion.py  test_hf_cache.py  test_outlier_split_parity.py  test_qjl.py  test_qjl_torch.py  test_quantizer_mse.py  test_quantizer_mse_torch.py  test_quantizer_outlier_split.py  test_quantizer_prod.py  test_quantizer_prod_torch.py  test_rotation.py  test_rotation_torch.py  test_store_outlier_split.py
(+1 files in other folders)
